Rregullimi i Project Tree ne baze te Entiteteve